항상 관리자권한으로 실행되도록 수정(불확실. 테스트 요망)

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,12 +1,13 @@
 {
+  "runAsAdmin": true,
   "version": "0.0.0",
   "main": "index.html",
   "name": "smart_auth",
   "window": {
     "width": 800,
     "height": 500,
-    "icon": "images/character.png",
+    "frame": false,
     "resizable": false,
-    "frame": false
+    "icon": "images/character.png"
   }
 }
