--- a/.gitignore
+++ b/.gitignore
@@ -316,3 +316,7 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+addon.node
+SampleCredentialProvider.dll
+google_otp_key_generator.exe
