--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,4 @@
 {
-  "runAsAdmin": true,
   "version": "0.0.0",
   "main": "index.html",
   "name": "smart_auth",
@@ -8,6 +7,6 @@
     "height": 500,
     "frame": false,
     "resizable": false,
-    "icon": "images/character.png"
+    "icon": "images/logo.png"
   }
 }
