--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
@@ -106,7 +106,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <OutputFile>$(ProjectDir)..\Result\$(TargetName)(debug)$(TargetExt)</OutputFile>
+      <OutputFile>$(ProjectDir)..\Dll\$(TargetName)(debug)$(TargetExt)</OutputFile>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <AdditionalDependencies>secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -144,7 +144,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <OutputFile>$(ProjectDir)..\Result\$(TargetName)$(TargetExt)</OutputFile>
+      <OutputFile>$(ProjectDir)..\Dll\$(TargetName)$(TargetExt)</OutputFile>
       <AdditionalLibraryDirectories>C:\program Files\microsoft sdKs\Windows\v1.0\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>secur32.lib;shlwapi.lib;gdi32.lib;ole32.lib;user32.lib;advapi32.lib;credui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>smartauthcredentialprovider.def</ModuleDefinitionFile>
