구글 otp 키 생성 프로젝트에서 코드생성을 다중 쓰레드로 변경(재배포 패키지 불필요).

--- a/google_otp_key_generator/Google OTP (Key Generation)/Google OTP (C++)/Google OTP (C++).vcxproj
+++ b/google_otp_key_generator/Google OTP (Key Generation)/Google OTP (C++)/Google OTP (C++).vcxproj
@@ -156,6 +156,11 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ClCompile>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="base32.cpp" />
     <ClCompile Include="HMAC_SHA1.cpp" />
