1. cp에 아두이노와 시리얼통신을 하는 코드를 넣음. (현재의 문제점 : 사용자 전환 버튼을 누르면 새로운 cp가 로드되는듯?? 기존에 com3포트로 연결되어 있어서 새로운 cp에서 접근권한을 획득하지 못하는 듯. 사용자 전환 버튼을 누르면 아두이노와 통신 두절.)
2. ui에서 smart id card나 donglein을 추가하면 cp에서 아두이노와 통신하여 인증을 수행함. 반대로 smart id card와 donglein이 모두 빠져있으면 cp는 아두이노와 통신하지 않음.

3. 새로 안 사실이지만 기존에는 ui를 배포할 때 google_otp_key_generation.exe와 SmartAuthCredentialProvider.dll을 포함하여 배포하였지만 이번 nwjs 버전 업데이트로 file read/write 라이브러리를 쓰면 여기에 쓰인 파일들은 빌드할 때 포함됨. 따라서 위 두가지 파일을 이제 더이상 포함할 필요가 없어짐.

--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="SHA1.h" />
     <ClInclude Include="SmartAuthCredential.h" />
     <ClInclude Include="SmartAuthProvider.h" />
+    <ClInclude Include="Tserial.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Auth.cpp" />
@@ -183,6 +184,7 @@
     <ClCompile Include="SHA1.cpp" />
     <ClCompile Include="SmartAuthCredential.cpp" />
     <ClCompile Include="SmartAuthProvider.cpp" />
+    <ClCompile Include="Tserial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
