--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="SmartAuthProvider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Tserial.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Auth.cpp">
@@ -99,6 +102,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SmartAuthProvider.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Tserial.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
