Tserial 제거 Serial 추가.

--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClInclude Include="SmartAuthProvider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Tserial.h">
+    <ClInclude Include="SerialClass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -104,7 +104,7 @@
     <ClCompile Include="SmartAuthProvider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Tserial.cpp">
+    <ClCompile Include="Serial.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
