--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
@@ -168,7 +168,7 @@
     <ClInclude Include="SHA1.h" />
     <ClInclude Include="SmartAuthCredential.h" />
     <ClInclude Include="SmartAuthProvider.h" />
-    <ClInclude Include="Tserial.h" />
+    <ClInclude Include="SerialClass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Auth.cpp" />
@@ -184,7 +184,7 @@
     <ClCompile Include="SHA1.cpp" />
     <ClCompile Include="SmartAuthCredential.cpp" />
     <ClCompile Include="SmartAuthProvider.cpp" />
-    <ClCompile Include="Tserial.cpp" />
+    <ClCompile Include="Serial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
