1. 애니메이션 실행에서 () => {} 처럼 화살표함수를 썼을때 this를 받지 못하는 현상때문에 이부분만 function() {} 형태로 사용 2. ui 프로그램을 실행하거나 기능을 수행할 때 복사할 파일이 많아짐에 따라서 폴더별로 파일을 나눔 3. donglein_driver 추가 4. donglein_dll 추가 5. addon에 donglein_dll.dll을 통하여 donglein_driver에 연결하여 usb의 300번지~316번지에 donglein key를 스트링으로 쓰고 읽는 함수(get_donglein_key(), set_donglein_key(string)) 추가

--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="SerialClass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="mbr.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Auth.cpp">
@@ -105,6 +108,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Serial.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mbr.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
