--- a/donglein/donglein_driver/donglein_driver Package/donglein_driver Package.vcxproj
+++ b/donglein/donglein_driver/donglein_driver Package/donglein_driver Package.vcxproj
@@ -51,13 +51,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E0F8B42B-EE9A-463C-9393-A3C0A601EE98}</ProjectGuid>
+    <ProjectGuid>{56CFB9AE-4FF1-400B-8658-A29703536F14}</ProjectGuid>
     <TemplateGuid>{4605da2c-74a5-4865-98e1-152ef136825f}</TemplateGuid>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration>Win8.1 Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
-    <RootNamespace>Donglein_Package</RootNamespace>
+    <RootNamespace>donglein_driver_Package</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Win8.1 Debug|Win32'" Label="Configuration">
@@ -324,8 +324,8 @@
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Donglein\Donglein.vcxproj">
-      <Project>{da09fbe1-98ed-4e95-8bab-519bdf63e971}</Project>
+    <ProjectReference Include="..\donglein_driver\donglein_driver.vcxproj">
+      <Project>{163bf0fe-a247-40b6-bdab-7d047dabdc47}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
