cp에 donglein 추가. 테스트 안해봄. 테스트 필요.

--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj
@@ -161,7 +161,7 @@
     <ClInclude Include="guid.h" />
     <ClInclude Include="helpers.h" />
     <ClInclude Include="HMAC_SHA1.h" />
-    <ClInclude Include="mbr.h" />
+    <ClInclude Include="donglein.h" />
     <ClInclude Include="MessageCredential.h" />
     <ClInclude Include="OtpCheck.h" />
     <ClInclude Include="RegCheck.h" />
@@ -179,7 +179,7 @@
     <ClCompile Include="guid.cpp" />
     <ClCompile Include="helpers.cpp" />
     <ClCompile Include="HMAC_SHA1.cpp" />
-    <ClCompile Include="mbr.c" />
+    <ClCompile Include="donglein.cpp" />
     <ClCompile Include="MessageCredential.cpp" />
     <ClCompile Include="OtpCheck.cpp" />
     <ClCompile Include="RegCheck.cpp" />
