--- a/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
+++ b/SmartAuthCredentialProvider/SmartAuthCredentialProvider/SmartAuthCredentialProvider.vcxproj.filters
@@ -63,7 +63,7 @@
     <ClInclude Include="SerialClass.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="mbr.h">
+    <ClInclude Include="donglein.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -110,7 +110,7 @@
     <ClCompile Include="Serial.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="mbr.c">
+    <ClCompile Include="donglein.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
