1. google_otp_key_generator 솔루션의 일부 헤더 파일이 열리지 않는 현상 때문에 솔루션을 다시 만듦 2. 사용하지 않는 아두이노 소스파일과 라이브러리 파일을 삭제 3. 약간의 코드 리펙토링(변수명 변경)

--- a/google_otp/google_otp_key_generator/google_otp_key_generator/google_otp_key_generator.vcxproj.filters
+++ b/google_otp/google_otp_key_generator/google_otp_key_generator/google_otp_key_generator.vcxproj.filters
@@ -21,21 +21,21 @@
     <ClCompile Include="HMAC_SHA1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="SHA1.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="SHA1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Downloads\HMAC_SHA1\HMAC_SHA1\HMAC_SHA1.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\Downloads\HMAC_SHA1\HMAC_SHA1\SHA1.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="base32.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="HMAC_SHA1.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="SHA1.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
